[package]
name = "cw-atomic-swap"
version = "0.1.0"
authors = ["stefanofrancesco.pitton@gmail.com"]
edition = "2021"
description = "A CosmWasm smart contract to allow users to perform atomic swaps on the Osmosis chain"
repository = "https://github.com/0xstepit/cw-atomic-swap"
license = "./LICENSE"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
library = []
backtraces = ["cosmwasm-std/backtraces"]

[profile.release]
opt-level = 3
rpath = false
lto = true
debug = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = true
panic = 'abort'

[dependencies]
cosmwasm-schema = "1.5.4"
cosmwasm-std = { version = "1.5.3", features = [
    "stargate",
    "cosmwasm_1_1",
] }
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.17"
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
serde-json-wasm = "1.0.1"
thiserror = "1.0.58"
osmosis-std = "0.24"
serde_json = "1.0.85"
prost = "0.12.4"

[dev-dependencies]
test-tube = "0.6.0"
osmosis-test-tube = "24.0.1"
